--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Myapp</string>
+    <string name="login">登录</string>
+    <string name="register">注册</string>
+
 </resources>
