--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Myapp</string>
     <string name="login">登录</string>
     <string name="register">注册</string>
+    <string name="account_hint">请输入用户名</string>
+    <string name="register_hint">请输入密码</string>
 
 </resources>
